# CdpProject

./: README.md  adalotto.cabal  cabal.project
Utilities/src/Utilities/: Conversions.hs
adalotto/: Adalotto.hs  LottoType.hs
bfs/: bf.preview.token
contract/: AdaLotto.plutus
datum/: adaLottoDatum.json
dist-newstyle/cache/: compiler  config  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: blockfrost-api-0.8.0.0-inplace.conf  blockfrost-client-0.7.1.1-inplace.conf  blockfrost-client-core-0.6.0.0-inplace.conf  package.cache  utilities-0.1.0.0-inplace.conf
dist-newstyle/src/: cardano-a_-69e96f3eceed3ed5.cache  cardano-l_-793ecdcee1fc1ce7.cache  plutus-si_-405d5a8470902f38.cache  purescrip_-fa901c7e00b7f37b.cache  quickchec_-59a1af83b9d68ed6.cache  servant-p_-232829bf471577c2.cache
sample/: exemple.json  exempleHaskell.json  sample.json  value.txt
script/: 1-makeJsonTicket.sh  2-sendMetaData.sh  sendContract.sh  ticket.json  tx.draft  tx.signed  v1-1-sendFund.sh  v1-2-claimByTresory.sh  v1-2-claimByWinner.sh  v2-1-makeJsonTicket.sh  v2-2-sendMetaData.sh
script/txTmp/: tx.draft  tx.signed
trash/: ActionFunction.hs  CHANGELOG.md.save0  LottoFunction.hs  adalotto.cabal.save0
