cabal-version:      3.0
name:               adalotto
version:            0.1.0.0
synopsis:           Project for CDP
license:            NONE
author:             Erwan Rich
maintainer:         wan.nea@gmail.com

extra-source-files: CHANGELOG.md


common common-all
    build-depends:    base  ^>=4.14.3.0
                    , aeson 
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
                    , random
                    , blockfrost-client
                    , blockfrost-api
                    


    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors



library
    import:             common-all
    hs-source-dirs:     adalotto
    exposed-modules:    Adalotto
                        
                        
                       
    
                        
   


    build-depends:
        base ^>=4.14.3.0,
        

    hs-source-dirs:   app
    default-language: Haskell2010
